...
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
            </LinearLayout>


            <EditText
                android:id="@+id/postText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/postMessageHint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />
...
                android:id="@+id/postImageLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/postImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="Posted image"
                    android:scaleType="centerInside" />

...
        android:id="@+id/optionMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/galleryButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:contentDescription="Gallery icon"
            app:srcCompat="@drawable/ic_menu_gallery" />

...
                android:src="@drawable/ic_event_black_24dp" />

        </RelativeLayout>


        <Button
            android:id="@+id/postButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="8dp"
...
