<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/map_support"
            android:checked="true"
            android:icon="@drawable/ic_map_24dp"
            android:title="@string/map_item" />

        <item
            android:id="@+id/your_posts"
            android:icon="@drawable/ic_whatshot_24dp"
            android:title="@string/your_posts_item" />

        <item
            android:id="@+id/follow"
            android:icon="@drawable/ic_addpost"
...
